# ESP-DRONE

./: .gitignore  AGENTS.md  PATCH_NOTES.md  README.md  README.zh-CN.md
docs/: CODEX_STATE.md  README.md  README.zh-CN.md  TUNING_DECISIONS.md  attitude_ground_verify_liftoff_plan.md  axis_truth_table.md  axis_truth_table.zh-CN.md  barometer_framework.md  barometer_framework.zh-CN.md  bringup_checklist.md  bringup_checklist.zh-CN.md  cli_live_test_matrix.md  cli_live_test_matrix.zh-CN.md  cli_live_test_results.md  cli_live_test_results.zh-CN.md  esp_drone_udp_compat.md  esp_drone_udp_compat.zh-CN.md  esp_idf_env.md  esp_idf_env.zh-CN.md  ground_tune_bringup_plan.md  ground_tune_log_fields.md  ground_tune_manual_workflow.md  hang_attitude_bringup_plan.md  hang_attitude_bringup_plan.zh-CN.md  hardware_extract.md  hardware_extract.zh-CN.md  imu_protocol_extract.md  imu_protocol_extract.zh-CN.md  motor_map.md  motor_map.zh-CN.md  old_led_behavior.md  old_led_behavior.zh-CN.md  open_questions.md  open_questions.zh-CN.md  pitch_bench_summary_sample.json  pitch_bench_summary_sample.md  python_cli_usage.md  (+25 more)
firmware/main/: CMakeLists.txt  app_main.c  esp_drone_types.h  runtime_state.c  runtime_state.h
firmware/main/attitude_bench/: attitude_bench.c  attitude_bench.h
firmware/main/barometer/: barometer.c  barometer.h
firmware/main/board/: board_config.c  board_config.h
firmware/main/console/: console.c  console.h  console_protocol.h
firmware/main/controller/: controller.c  controller.h
firmware/main/estimator/: estimator.c  estimator.h
firmware/main/ground_tune/: ground_tune.c  ground_tune.h
firmware/main/imu/: imu.c  imu.h
firmware/main/led_status/: led_status.c  led_status.h
firmware/main/mixer/: mixer.c  mixer.h
firmware/main/motor/: motor.c  motor.h
firmware/main/network/: wifi_ap.c  wifi_ap.h
firmware/main/params/: params.c  params.h
firmware/main/safety/: safety.c  safety.h
firmware/main/udp_manual/: udp_manual.c  udp_manual.h
firmware/main/udp_protocol/: udp_protocol.c  udp_protocol.h
tools/esp_drone_cli/: pyproject.toml
tools/esp_drone_cli/esp_drone_cli/: __init__.py  __main__.py  client.py  gui_main.py
tools/esp_drone_cli/esp_drone_cli/cli/: __init__.py  main.py
tools/esp_drone_cli/esp_drone_cli/core/: __init__.py  csv_log.py  device_session.py  ground_bench.py  liftoff_threshold.py  models.py  motor_balance.py  roll_bench.py
tools/esp_drone_cli/esp_drone_cli/core/protocol/: __init__.py  framing.py  messages.py
tools/esp_drone_cli/esp_drone_cli/core/transport/: __init__.py  base.py  serial_link.py  udp_link.py
tools/esp_drone_cli/esp_drone_cli/gui/: __init__.py  main_window.py
tools/esp_drone_cli/esp_drone_cli/protocol/: framing.py  messages.py
tools/esp_drone_cli/esp_drone_cli/transport/: base.py  serial_link.py  udp_link.py
tools/esp_drone_cli/tests/: conftest.py  test_control_contracts.py  test_core_session.py  test_docs_sync.py  test_framing.py  test_liftoff_threshold.py  test_roll_bench.py
(+5 files in other folders)
