[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "esp-drone-cli"
version = "0.1.0"
description = "Binary CLI for the ESP-Drone rewrite"
requires-python = ">=3.11"
dependencies = [
  "pyserial>=3.5",
]

[project.scripts]
esp-drone-cli = "esp_drone_cli.__main__:main"
